[gd_scene load_steps=5 format=3 uid="uid://blg3pqyxefe0v"]

[ext_resource type="Script" path="res://addons/quest_manager/Editor/EditorWindow.gd" id="1_8041a"]

[sub_resource type="Image" id="Image_n7gnt"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 93, 93, 55, 255, 97, 97, 58, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 98, 98, 47, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 94, 94, 46, 255, 93, 93, 236, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_4uux5"]
image = SubResource("Image_n7gnt")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vy0pf"]

[node name="EditorView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8041a")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="hb" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2

[node name="side_panel" type="VBoxContainer" parent="MarginContainer/hb"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="hb" type="HBoxContainer" parent="MarginContainer/hb/side_panel"]
layout_mode = 2

[node name="New" type="Button" parent="MarginContainer/hb/side_panel/hb"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("ImageTexture_4uux5")
flat = true

[node name="Load" type="Button" parent="MarginContainer/hb/side_panel/hb"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("ImageTexture_4uux5")
flat = true

[node name="Save" type="Button" parent="MarginContainer/hb/side_panel/hb"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Save Quest"
icon = SubResource("ImageTexture_4uux5")
flat = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/hb/side_panel"]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxFlat_vy0pf")

[node name="Panel" type="Panel" parent="MarginContainer/hb/side_panel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Quest Panel" type="VBoxContainer" parent="MarginContainer/hb"]
layout_mode = 2

[node name="hb" type="HBoxContainer" parent="MarginContainer/hb/Quest Panel"]
layout_mode = 2

[node name="MenuButton" type="MenuButton" parent="MarginContainer/hb/Quest Panel/hb"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Node..."
item_count = 7
popup/item_0/text = "Add Quest"
popup/item_0/id = 0
popup/item_1/text = "Add Step"
popup/item_1/id = 1
popup/item_2/text = "Add Incremental Step"
popup/item_2/id = 2
popup/item_3/text = "Add Item Step"
popup/item_3/id = 3
popup/item_4/text = "Add Group Tag"
popup/item_4/id = 4
popup/item_5/text = "Add Meta Data"
popup/item_5/id = 5
popup/item_6/text = "And End Node"
popup/item_6/id = 6

[node name="Button" type="Button" parent="MarginContainer/hb/Quest Panel/hb"]
layout_mode = 2
text = "Placeholder"
flat = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/hb/Quest Panel"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="GraphEdit" type="GraphEdit" parent="MarginContainer/hb/Quest Panel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
right_disconnects = true
use_snap = false
arrange_nodes_button_hidden = true

[node name="New_File" type="FileDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(312, 162)
ok_button_text = "Create"
filters = PackedStringArray("*.quest")

[node name="Open_File" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(312, 162)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.quest")

[node name="Save_File" type="FileDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(312, 157)
ok_button_text = "Save"
filters = PackedStringArray("*.quest")

[node name="Quest_Warning" type="AcceptDialog" parent="."]
title = "Invalid/Incomplete Quest(s)."
size = Vector2i(431, 135)
dialog_text = "File Saved.
Make sure Quests has Connected Steps
and an End Node at the end of their steps chain"

[node name="right_mouse_list" type="PopupMenu" parent="."]
unique_name_in_owner = true
item_count = 7
item_0/text = "Add Quest"
item_0/id = 0
item_1/text = "Add Step"
item_1/id = 1
item_2/text = "Add Incremental Step"
item_2/id = 2
item_3/text = "Add Item Step"
item_3/id = 3
item_4/text = "Add Group Tag"
item_4/id = 4
item_5/text = "Add Meta Data"
item_5/id = 5
item_6/text = "And End Node"
item_6/id = 6

[connection signal="pressed" from="MarginContainer/hb/side_panel/hb/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="MarginContainer/hb/side_panel/hb/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="MarginContainer/hb/side_panel/hb/Save" to="." method="_on_save_pressed"]
[connection signal="connection_from_empty" from="MarginContainer/hb/Quest Panel/GraphEdit" to="." method="_on_graph_edit_connection_from_empty"]
[connection signal="connection_request" from="MarginContainer/hb/Quest Panel/GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="connection_to_empty" from="MarginContainer/hb/Quest Panel/GraphEdit" to="." method="_on_graph_edit_connection_to_empty"]
[connection signal="delete_nodes_request" from="MarginContainer/hb/Quest Panel/GraphEdit" to="." method="_on_graph_edit_delete_nodes_request"]
[connection signal="disconnection_request" from="MarginContainer/hb/Quest Panel/GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="node_selected" from="MarginContainer/hb/Quest Panel/GraphEdit" to="." method="_on_graph_edit_node_selected"]
[connection signal="popup_request" from="MarginContainer/hb/Quest Panel/GraphEdit" to="." method="_on_graph_edit_popup_request"]
[connection signal="file_selected" from="New_File" to="." method="_on_new_file_file_selected"]
[connection signal="file_selected" from="Open_File" to="." method="_on_open_file_file_selected"]
[connection signal="file_selected" from="Save_File" to="." method="_on_save_file_file_selected"]
